mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj is loaded)
Auto Toggles (loot, goold, split, sac, assist, map)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)t
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
tbaMUD 3.59
[Jan 25 2009] - Rumble
  Added new documentation /doc unixshelladminguide. (thanks Jamdog).
  Added new zone creation limits to prevent misuse of zedit making the MUD unbootable.
[Jan 25 2009] - Jamdog
  Added cases for missing object types in oedit_disp_val1_menu (other, worn, treasure, trash, key, pen, boat)
[Jan 25 2009] - Rumble
  Fixed pardon. (thanks Echos-Ironcastle)
[Jan 24 2009] - Rumble
  Fixed command queue cancelling "--" from cancelling the next command. (thanks Frenze/Ogdin)
  Fixed object timer values from not saving. (thanks Stoneheart)
  Fixed latest GCC warnings in the /utils. (thanks Jamdog)
  Fixed violent area spells so they would not harm group members. (thanks Nhilar)
  Changed usage of qm->nr to GET_MOB_VNUM(qm). (thanks Tails)
[Jan 21 2009] - Jamdog 
  Added trigedit variable %move% to teleport objects.
  Fixed memory leak in generic_complete_quest.
  A bug fix to player attachable scripts.
  A better fix to the DIKU double attack by ordering a mob to save its master.
  Fix to remove weight restrictions for immortals.
tbaMUD 3.58
[Jan 18 2009] - Rumble
  Updated World and files for 3.58 release.
  Bug fix for column_list to properly display commands, socials, wizhelp, etc. (thanks Jamdog)
[Jan 15 2009] - Fizban
  Immortals can now never have their hands full when you attempt to hand them an item.
[Jan 13 2009] - Rumble
  Questmaster variable changed from an rnum to a vnum. (thanks Jamdog)
  Fixed a bug in dg_variables.c find_replacment with the new quest variable. (thanks Jamdog)
  Fixed message when setting gold abnormally high.
[Jan 09 2009] - Fizban