@@ -1,5 +1,5 @@
-                              Your MUD Name Here
-                              lib/text/greetings
+                               T  B  A  M   U   D
+                         D E V E L O P M E N T  P O R T
 
                               Based on CircleMUD,
                             Created by Jeremy Elson
