@@ -1,8 +1,4 @@
-(lib/text/motd)
-
       Welcome to
-
-        		       T  B  A  M   U   D
-                  "We addict players for their own enjoyment."
-                            Created by Jeremy Elson
-
+                               T  B  A  M   U   D
+                         D E V E L O P M E N T  P O R T
+        Please be brutal with the bug, idea, and typo commands. -- Rumble
